# Cornus

./: .AutoDelete.hh.swp  .ByteArray.hpp.swp  .gitignore  App.cpp  App.hpp  AutoDelete.hh  ByteArray.cpp  ByteArray.hpp  CMakeLists.txt  CondMutex.hpp  DesktopFile.cpp  DesktopFile.hpp  ElapsedTimer.cpp  ElapsedTimer.hpp  ExecInfo.cpp  ExecInfo.hpp  Hid.cpp  Hid.hpp  History.cpp  History.hpp  Media.cpp  Media.hpp  MutexGuard.cpp  MutexGuard.hpp  MyDaemon.cpp  MyDaemon.hpp  Prefs.cpp  Prefs.hpp  README.md  SidePaneItems.cpp  SidePaneItems.hpp  TreeData.cpp  TreeData.hpp  category.cc  category.hh  cornus.cc  cornus.hh  decl.hxx  defines.hxx  err.hpp  (+25 more)
Debug/: CMakeCache.txt  Makefile  cmake_install.cmake
Debug/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake  deploy_cornus_84c07989bf.cmake
Debug/cornus_autogen/: deps  mocs_compilation.cpp
Debug/cornus_autogen/3YJK5W5UP7/: qrc_resources.cpp
Debug/cornus_autogen/DMHXEJ42XS/: moc_CountFolder.cpp  moc_CountFolder.cpp.d  moc_Hiliter.cpp  moc_Hiliter.cpp.d  moc_Tab.cpp  moc_Tab.cpp.d  moc_Table.cpp  moc_Table.cpp.d  moc_TableHeader.cpp  moc_TableHeader.cpp.d  moc_TableModel.cpp  moc_TableModel.cpp.d  moc_TextField.cpp  moc_TextField.cpp.d  moc_TreeModel.cpp  moc_TreeModel.cpp.d  moc_TreeView.cpp  moc_TreeView.cpp.d
Debug/cornus_autogen/EWIEGA46WW/: moc_App.cpp  moc_App.cpp.d  moc_ByteArray.cpp.d  moc_Media.cpp  moc_Media.cpp.d
Debug/cornus_autogen/KRHXW7JQHD/: moc_FsEvents.cpp  moc_FsEvents.cpp.d
Debug/cornus_autogen/include/: FsEvents.moc.d
Debug/cornus_io_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
Debug/cornus_io_autogen/DMHXEJ42XS/: moc_TaskGui.cpp  moc_TaskGui.cpp.d  moc_TasksWin.cpp  moc_TasksWin.cpp.d
Debug/cornus_io_autogen/EWIEGA46WW/: moc_ByteArray.cpp  moc_ByteArray.cpp.d  moc_MyDaemon.cpp  moc_MyDaemon.cpp.d
Debug/cornus_io_autogen/HR73DCNJIQ/: moc_Daemon.cpp  moc_Daemon.cpp.d
export/: (Not Used) org.kde.cornus.policy  cornus_mas.desktop  io.github.Cornus.desktop
file_icons/: 7z  cc  hxx  jpeg.lnk  m4a  m4v  mp4  webm  webp  xls  xz
gui/: AttrsDialog.cpp  AttrsDialog.hpp  BasicTable.hpp  CompleterModel.cpp  CompleterModel.hpp  ConfirmDialog.cpp  ConfirmDialog.hpp  CountFolder.cpp  CountFolder.hpp  Hiliter.cpp  Hiliter.hpp  IconView.cpp  IconView.hpp  Location.cpp  Location.hpp  MediaDialog.cpp  MediaDialog.hpp  OpenOrderModel.cpp  OpenOrderModel.hpp  OpenOrderPane.cpp  OpenOrderPane.hpp  OpenOrderTable.cpp  OpenOrderTable.hpp  OpenWithPane.cpp  OpenWithPane.hpp  PrefsPane.cpp  PrefsPane.hpp  RestorePainter.hpp  SearchLineEdit.cpp  SearchLineEdit.hpp  SearchPane.cpp  SearchPane.hpp  ShallowItem.cpp  ShallowItem.hpp  SidePane.cpp  SidePane.hpp  SidePaneItem.cpp  SidePaneItem.hpp  SidePaneModel.cpp  SidePaneModel.hpp  (+34 more)
io/: Daemon.cpp  Daemon.hpp  DirStream.cpp  DirStream.hpp  File.cpp  File.hpp  Files.cpp  Files.hpp  ListenThread.cpp  ListenThread.hpp  Notify.cpp  Notify.hpp  ProcessRequest.cpp  ProcessRequest.hpp  SaveFile.cpp  SaveFile.hpp  Server.cpp  Server.hpp  Task.cpp  Task.hpp  decl.hxx  desktop.cc  desktop.hh  disks.cc  disks.hh  io.cc  io.hh  socket.cc  socket.hh  uring.cc  uring.hh
mc/: mkvparser.cpp  mkvreader.cpp
misc/: Blacklist.cpp  Blacklist.hpp  mc.cc  mc.hh  mkvparser.hpp  mkvreader.hpp
resources/: resources.qrc
tests/: FsEvents.cpp  FsEvents.hpp
